# feed-key-service

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build-and-test.yml  codeql-analysis.yml  container.yml  openapi.yml  release.yml
certs/: README.md  client-certificates.sh  server-certificates.sh
jwt/: README.md  generate-ecdsa.sh  generate-rsa.sh  generate-secret.sh
src/: api.rs  app.rs  certs.rs  cli.rs  health.rs  jwt.rs  key.rs  lib.rs  main.rs  middleware.rs  openapi.rs  service.rs  validation.rs
src/api/: health.rs  key.rs
src/cli/: cli.rs  main.rs  parser.rs
src/service/: api.rs  app.rs  cli.rs  error.rs  main.rs  middleware.rs  openapi.rs  response.rs
src/service/api/: health.rs  key.rs
tests/: service.rs
tests/features/: apidoc.feature  health.feature  key.feature
