[package]
name = "greenbone-feed-key"
version = "0.1.0"
edition = "2024"
description = "A Service for Uploading a Greenbone Feed Key"
publish = false

[[bin]]
name = "greenbone-feed-key"
path = "src/service/main.rs"

[[bin]]
name = "greenbone-feed-key-cli"
path = "src/cli/main.rs"

[[test]]
name = "service"
harness = false

[dependencies]
axum = { version = "0.8.8", features = ["http2", "multipart"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive", "env"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = [
  "compression-full",
  "decompression-full",
  "fs",
  "trace",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
cucumber = { version = "0.22.1", features = ["tracing"] }
rust-multipart-rfc7578_2 = "0.8.0"
tempfile = "3.24.0"
